# clarion-intelligence-system

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
LICENSES/: README.md
backtests/: README.md
backtests/spy_tlt_signals/: backtest.py
backtests/spy_tlt_signals/data/: SPY.csv  TLT.csv
docs/: ALLOCATION-POLICY.md  DESIGN-LANGUAGE.md  MISSION.md  PERSONAS-AND-RULES.md  PRINCIPLES.md  TEST-PLAN.md  ZO-GOVERNANCE-REFERENCE.md
lib/: pyproject.toml
lib/ai_buffett_zo/: __init__.py  _paths.py
lib/ai_buffett_zo/data/: __init__.py  yfinance_store.py
lib/ai_buffett_zo/evaluation/: __init__.py  buffett_lens.py  fundamentals.py
lib/ai_buffett_zo/indexer/: __init__.py  main.py  queue.py  runtime.py  status.py
lib/ai_buffett_zo/letters/: __init__.py  compose.py  io.py
lib/ai_buffett_zo/llm/: __init__.py  schemas.py  zo_client.py
lib/ai_buffett_zo/macro/: __init__.py  treasury.py  valuation.py
lib/ai_buffett_zo/observability/: __init__.py  timing.py  version.py
lib/ai_buffett_zo/regime/: __init__.py  color.py
lib/ai_buffett_zo/screener/: __init__.py  scoring.py  types.py  watchlist_io.py
lib/ai_buffett_zo/secrag/: __init__.py  loader.py  recovery.py  search.py  sections.py  storage.py  tree.py
lib/ai_buffett_zo/secrag/pageindex/: __init__.py  config.yaml  utils.py
lib/ai_buffett_zo/secrag/parsers/: __init__.py  html.py  text.py  xml.py
lib/ai_buffett_zo/theses/: __init__.py  health.py  io.py  types.py
lib/ai_buffett_zo/voice/: __init__.py  templates.py
scripts/: zo_ask_prototype.py
services/sec-indexer/: README.md  service.json
skills/clarion-expected-return-calc/: SKILL.md
skills/clarion-living-letter-update/: SKILL.md
skills/clarion-portfolio-monitor/: SKILL.md
skills/clarion-regime-check/: SKILL.md
skills/clarion-sec-research/: SKILL.md
skills/clarion-setup/: SKILL.md
skills/clarion-single-stock-eval/: SKILL.md
skills/clarion-thesis-monitor/: SKILL.md
skills/clarion-thesis-write/: SKILL.md
skills/clarion-value-screener/: SKILL.md
skills/clarion-watchlist-update/: SKILL.md
tests/: test_buffett_lens.py  test_eval_skill.py  test_expected_return_skill.py  test_fundamentals.py  test_indexer_main.py  test_indexer_queue.py  test_indexer_routing.py  test_indexer_runtime.py  test_indexer_status.py  test_letter_skill.py  test_letters_compose.py  test_letters_io.py  test_macro_treasury.py  test_macro_valuation.py  test_observability_timing.py  test_observability_version.py  test_pageindex_vendored.py  test_paths.py  test_regime.py  test_regime_skill.py  test_research_skill.py  test_screener_scoring.py  test_screener_skill.py  test_screener_watchlist_io.py  test_secrag_form_allowlist.py  test_secrag_loader.py  test_secrag_parsers.py  test_secrag_recovery.py  test_secrag_search.py  test_secrag_search_reasoning.py  test_secrag_sections.py  test_secrag_sections_generic.py  test_secrag_storage.py  test_secrag_tree.py  test_setup_script.py  test_templates.py  test_thesis_health.py  test_thesis_io.py  test_thesis_monitor_skill.py  test_thesis_types.py  (+5 more)
zo-config/: clarion-zo-snapshot-2026-05-14.json
(+18 files in other folders)
