[project]
name = "ai-buffett-zo"
version = "0.1.0"
description = "Buffett-style investment research library for Clarion Intelligence System on Zo Computer"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jing Xie" }]
keywords = ["investing", "sec-edgar", "zo-computer", "value-investing", "buffett"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
sec-indexer = "ai_buffett_zo.indexer.main:main"

[project.urls]
Homepage = "https://github.com/jingerzz/clarion-intelligence-system"
Issues = "https://github.com/jingerzz/clarion-intelligence-system/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_buffett_zo"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored upstream code (MIT-licensed, see LICENSES/PageIndex-LICENSE) is not
# subject to our style. Exclude it from linting so we can track upstream cleanly.
extend-exclude = ["ai_buffett_zo/secrag/pageindex/page_index.py",
                  "ai_buffett_zo/secrag/pageindex/page_index_md.py",
                  "ai_buffett_zo/secrag/pageindex/utils.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
